<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.LoginActivity"><LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"><ImageView
            android:layout_width="wrap_content"
            android:layout_height="182dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/img_login_margin"
            android:src="@mipmap/wsu" /><TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="WSU Social"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#FFFFFF" /><com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"><EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/email_field_margin"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" /></com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"><EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/password_field_margin"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" /></com.google.android.material.textfield.TextInputLayout><Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_login_margin"
            android:text="@string/btn_login"
            android:textColor="@android:color/black" /><Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_login_margin"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_signup_text_size" /></LinearLayout><ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/progress_bar_margin"
        android:visibility="gone" /></androidx.coordinatorlayout.widget.CoordinatorLayout>