<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"><item android:id="@+id/action_user_info"
        android:title="@string/user_info"
        app:showAsAction="never" /><item android:id="@+id/action_logout"
        android:title="@string/log_out"
        app:showAsAction="never" /></menu>