<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.RegisterActivity"><LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"><ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/img_login_margin"
                android:src="@mipmap/wsu" /><TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="WSU Social"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#FFFFFF" /><com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"><EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/white" /></com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"><EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white" /></com.google.android.material.textfield.TextInputLayout><Button
                android:id="@+id/btn_register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_login_margin"
                android:text="@string/action_sign_in_short"
                android:textColor="@android:color/black"
                android:textStyle="bold" /><Button
                android:id="@+id/btn_sign_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_sign_in_margin"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_signup_text_size" />
        </LinearLayout><ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/progress_bar_margin"
            android:visibility="gone" /></androidx.coordinatorlayout.widget.CoordinatorLayout>